--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 
+
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
@@ -112,8 +113,8 @@ body {
 
 		<script src="index.js"></script>
 		<script>
-const GODOT_CONFIG = {"args":[],"canvasResizePolicy":1,"emscriptenPoolSize":8,"ensureCrossOriginIsolationHeaders":true,"executable":"index","experimentalVK":false,"fileSizes":{"index.pck":99746128,"index.wasm":1588912},"focusCanvas":true,"gdextensionLibs":["libdd3d.web.template_debug.wasm32.wasm"],"godotPoolSize":4};
-const GODOT_THREADS_ENABLED = false;
+const GODOT_CONFIG = {"args":[],"canvasResizePolicy":1,"emscriptenPoolSize":8,"ensureCrossOriginIsolationHeaders":true,"executable":"index","experimentalVK":false,"fileSizes":{"index.pck":99746080,"index.wasm":1656762},"focusCanvas":true,"gdextensionLibs":["libdd3d.web.template_debug.wasm32.threads.wasm"],"godotPoolSize":4};
+const GODOT_THREADS_ENABLED = true;
 const engine = new Engine(GODOT_CONFIG);
 
 (function () {
